--- a/tests/testservers.html
+++ b/tests/testservers.html
@@ -1,3 +1,5 @@
+<!-- This file contains an example of the html data we would receive when scraping livesow.net/livefork. -->
+<!-- Specific server information is hardcoded for testing purposes. -->
 <html>
     <body>
 		<div id="root">
